
 - [2012-05-01] Updated regexp optimiser to work correctly with the extended set of wildcards, escape sequences,
   and special groups in PCRE regular expressions. CURRENTLY IN TESTING PHASE.

 - [2012-05-20: v3.4.4] Fixed bug causing segmentation fault in cwb-scan-corpus.

 - [2012-07-17: v3.4.5] Fixed bug causing segmentation fault in CQP when cat output with header is requested.

Version 3.2
-----------

Version 3.2 of CWB adds Unicode support (utf8). It also breaks backwards compatability in one,
possibly important way: all "identifiers" (names of corpora, attributes, subcorpora etc.) must use ASCII characters
only - no Latin1 accented letters, for instance. This is necessary to avoid potential conflicts between Latin1 and
UTF8 encodings in filenames and directory paths. Any corpora you have from earlier versions which use accented 
letters in their "identifiers" must be reindexed to work with version 3.2 or above.

As a result of the work on Unicode, character set awareness is now active throughout CWB. Also, the regular 
expression language supported in the CL and through CQP has changed from POSIX-flavour regexes to PCRE regexes
(Perl-compatible). In UTF8 corpora, all unicode properties, etc., can be used in regular expressions using the
usual PCRE syntax.

Other changes:

 - cwb-encode now validates the encoding of files as it imports them against the corpus character set. Invalid
   bytes or byte sequences lead to an abort. The default character set is Latin1, this can be changed with
   the -c option. For ASCII and ISO8859-* character sets, invalid bytes (such as the [\x80-\x9f] range) can
   automatically be replaced by '?' characters if the -C option is specified.
   
 - the Corpus Library (CL) has been reorganised to make programming against it easier, and it now contains 
   several more utility functions.

 - command-line editing backported from included Editline library to external GNU Readline (which was originally