@@ -26,7 +26,7 @@ include $(TOP)/config/platform/darwin
 CC = /usr/bin/gcc
 
 ## Universal build for Intel 32-bit & 64-bit CPUs (standard since for OS X 10.6, which drops PPC support)
-CFLAGS = -Wall -O3 -arch x86_64 -arch i386
+CFLAGS = -Wall -O3 -arch x86_64 -arch i386 -march=core2 -mtune=core2
 
 DEPEND_CFLAGS = -Wall -O3
 
